@startuml

title __ADP Set Class Diagram__

  package types {
    class Elem {
        + key : int
        + data : T
        + Elem(data : T)
        + Elem(key : int, data : T)
        + toString() : String
    }
  }


  package types {
    class Node {
        - next : Node
        - elem : Elem
        + Node()
        + Node(elem : Elem)
        + getNext() : Node
        + setNext(next : Node)
        + getElem() : Elem
    }
  }


  package types {
    class Pos {
        + isValid : Boolean
        # pointer : T
        # set : SetInterface
        - previousIndex : Integer
        - nextIndex : Integer
        + Pos(pointer : T, set : SetInterface)
        + Pos(pointer : T, set : SetInterface, preI : int, nextI : int)
        + getPointer() : T
        + getPreviousIndex() : int
        + setPreviousIndex(previousIndex : int)
        + setNextIndex(nextIndex : int)
        + getNextIndex() : int
        + getSet() : SetInterface
        + setPointer(pointer : Object)
    }
  }
  

  package set {
    class SetArray {
        - DEFSIZE : int
        - elements : Elem<?>[]
        - positions : Pos<Integer>[]
        - elemSize : int
        - posSize : int
        + SetArray()
        + SetArray(size : int)
        + add(elem : Elem)
        + delete(pos : Pos)
        + delete(key : Key)
        + find(Key : int) : Pos
        + retrieve(pos : Pos) : Elem
        + showall()
        + size() : int
        {static} + unify()
        + retrieveAll() : Elem[]
    }
  }


  package set {
    class SetContainerArray {
        - DEFSIZE : int
        - positions : Pos<?>[]
        - posSize : int
        - elemSize : int
        + SetContainerArray()
        + SetContainerArray(size : int)
        + add(elem : Elem)
        + delete(pos : Pos)
        + delete(key : Key)
        + find(Key : int) : Pos
        + retrieve(pos : Pos) : Elem
        + retrieveAll() : Elem[]
        + showall()
        + size() : int
        {static} + unify()
    }
  }


  package set {
    class SetContainer {
        - DEFSIZE : int
        - positions : Pos<Node>[]
        - posSize : int
        + SetContainer()
        + SetContainer(size : int)
        + add(elem : Elem)
        + delete(pos : Pos)
        + delete(key : Key)
        + find(Key : int) : Pos
        + retrieve(pos : Pos) : Elem
        + retrieveAll() : Elem[]
        + showall()
        + size() : int
        {static} + unify()
    }
  }


  package set {
    interface SetInterface {
        {abstract} + add(elem : Elem)
        {abstract} + delete(pos : Pos)
        {abstract} + delete(key : Key)
        {abstract} + find(Key : int) : Pos
        {abstract} + retrieve(pos : Pos) : Elem
        {abstract} + retrieveAll() : Elem[]
        {abstract} + showall()
        {abstract} + size() : int
        {static} + unify()
    }
  }
  

  Node o-- Node : next
  Node o-- Elem : elem
  SetArray -up-|> SetInterface
  SetContainer -up-|> SetInterface
  SetContainer o-- Node : head
  SetContainer o-- Node : tail
  SetContainer o-- Pos : positions
  SetContainerArray o-- Pos : positions
  SetArray o-- Pos : positions
  SetArray o-- Elem : elements
  SetContainerArray -up-|> SetInterface



@enduml
